# nanoget-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  example_library_usage.rs  simple_example.rs  test_data.fastq
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  extract.rs  formats.rs  lib.rs  main.rs  metrics.rs  utils.rs
tests/: integration_tests.rs  library_api_tests.rs
