[package]
name = "nanoget-rs"
version = "0.1.0"
edition = "2021"
authors = ["Wouter De Coster <decosterwouter@gmail.com>"]
description = "Extract metrics from Oxford Nanopore sequencing data and alignments"
license = "GPL-3.0"
repository = "https://github.com/wdecoster/nanoget-rs"
keywords = ["nanopore", "sequencing", "bioinformatics", "metrics"]
categories = ["science"]

[dependencies]
# Command line interface
clap = { version = "4.0", features = ["derive"] }

# File I/O and compression
flate2 = "1.0"
bzip2 = "0.4"

# BAM/SAM/CRAM file handling
rust-htslib = "0.46"

# FASTQ/FASTA parsing
bio = "1.6"

# CSV/TSV parsing for summary files
csv = "1.3"

# Data structures and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Parallel processing
rayon = "1.8"

# Statistics and math
statrs = "0.16"

# Progress bars
indicatif = { version = "0.17", features = ["rayon"] }

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "nanoget"
path = "src/main.rs"

[lib]
name = "nanoget_rs"
path = "src/lib.rs"
